dcim-topology-service/deploy/kubernetes/topology-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dcim-topology-headless
  namespace: default
spec:
  clusterIP: None
  selector:
    app: dcim-topology-service
  ports:
    - name: graphql
      port: 3000
      targetPort: 3000
